feat: add permissions and entity seed initializer